2013-06-09  Robby Stephenson  <robby@periapsis.org>

	* Added Bibtex importing for drag/drop text (Bug 319182).

2013-06-08  Robby Stephenson  <robby@periapsis.org>

	* Fixed Entrex/Pubmed fetcher for summary requests (Bug 319501).

2013-04-05  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with retaining allowed values when adding entries from data sources (Bug 317905).

2013-03-27  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with not properly escaping text in CSV exporter (Bug 317473).

2013-03-24  Robby Stephenson  <robby@periapsis.org>

	* Updated GiantBombFetcher for XML changes in responses.

2013-03-11  Robby Stephenson  <robby@periapsis.org>

	* Fixed regexp in Google Scholar fetcher to set cookie (Bug 316550).

2013-03-10  Robby Stephenson  <robby@periapsis.org>

	* Update Allocine API to use JSON instead of XML.

2013-03-03  Robby Stephenson  <robby@periapsis.org>

	* Add coverartarchive.org to MusicBrainz data source.

2013-02-09  Robby Stephenson  <robby@periapsis.org>

	* Fixed character encoding in IMDB results list (Bug 314113).

2013-02-02  Robby Stephenson  <robby@periapsis.org>

	* Added fetcher for VNDB.org.

2013-01-27  Robby Stephenson  <robby@periapsis.org>

	* Added Dewey Decimal and LCC to ISBNdb.org results.

2013-01-26  Robby Stephenson  <robby@periapsis.org>

	* Fixed crashing bug with OpenLibrary fetcher.

2013-01-23  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 2.3.7.

2013-01-18  Robby Stephenson  <robby@periapsis.org>

	* Fixed a bug with the number field not catching a modified value (Bug 313304).

2013-01-08  Robby Stephenson  <robby@periapsis.org>

	* Fixed a bug with editing the toolbar config in KDE 4.9.2+.

2012-12-07  Robby Stephenson  <robby@periapsis.org>

	* Added a config setting for using a Google API key for book searches.
	* Updated fetcher for IMDb.

2012-11-21  Robby Stephenson  <robby@periapsis.org>

	* Added VinoXML importer.

2012-11-03  Robby Stephenson  <robby@periapsis.org>
